Changes in code

--- a/gallery.html
+++ b/gallery.html
@@ -180,7 +180,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Location</h3>
-                                <p>You’ll look at graphs and charts in Task One, how to approach </p>
+                                <p>Near Bhiwani Public School,Gymkhana Club</p>
                             </div>
                         </div>
                     </div>
