--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-xl-9 col-lg-9 col-md-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInLeft" data-delay="0.1s">Hi This is Tuitions Tonight</span>
+                                    <span data-animation="fadeInLeft" data-delay="0.1s">Dhruv Panwar</span>
                                     <h1 data-animation="fadeInLeft" data-delay="0.4s">Gym Trainer</h1>
                                     <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">My Courses</a>
                                 </div>
@@ -278,8 +278,8 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">1 month</span>
+                                    <p class="mb-25">₹3000/m <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -332,8 +332,8 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">3 month</span>
+                                    <p class="mb-25">₹7500 <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -387,7 +387,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <p class="mb-25">₹10000 <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -507,7 +507,7 @@
             <div class="container">
                 <div class="video-wrap position-relative">
                     <div class="video-icon">
-                        <a class="popup-video btn-icon" href="https://youtu.be/bJpn4GWfSTQ"><i class="fas fa-play"></i></a>
+                        <a class="popup-video btn-icon" href="https://www.youtube.com/shorts/_5DUp8yY7qA"><i class="fas fa-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -524,7 +524,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Location</h3>
-                                <p>You’ll look at graphs and charts in Task One, how to approach </p>
+                                <p>Near Bhiwani Public School,Gymkhana Club</p>
                             </div>
                         </div>
                     </div>
@@ -608,7 +608,7 @@
                                     Copyright &copy;
                                     <script>
                                         document.write(new Date().getFullYear());
-                                    </script> All rights reserved | <i class="fa fa-heart" aria-hidden="true"></i> <a href="https://www.TuitionsTonight.com" target="_blank">TuitionsTonight</a>
+                                    </script> All rights reserved | <i class="fa fa-heart" aria-hidden="true"></i> <span>Dhruv Panwar</span>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
