--- a/pricing.html
+++ b/pricing.html
@@ -114,8 +114,62 @@
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">1 month</span>
+                                    <p class="mb-25">₹3000/m <span>(Single class)</span></p>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Free riding </p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Unlimited equipments</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Personal trainer</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Weight losing classes</p>
+                                        </div>
+                                    </div>
+                                    <div class="single-features mb-20">
+                                        <div class="features-icon">
+                                            <img src="assets/img/icon/check.svg" alt="">
+                                        </div>
+                                        <div class="features-caption">
+                                            <p>Month to mouth</p>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="border-btn border-btn2">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="properties mb-30">
+                            <div class="properties__card">
+                                <div class="about-icon">
+                                    <img src="assets/img/icon/price.svg" alt="">
+                                </div>
+                                <div class="properties__caption">
+                                    <span class="month">3 month</span>
+                                    <p class="mb-25">₹7500 <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -169,61 +223,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Free riding </p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Unlimited equipments</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Personal trainer</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Weight losing classes</p>
-                                        </div>
-                                    </div>
-                                    <div class="single-features mb-20">
-                                        <div class="features-icon">
-                                            <img src="assets/img/icon/check.svg" alt="">
-                                        </div>
-                                        <div class="features-caption">
-                                            <p>Month to mouth</p>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="border-btn border-btn2">Join Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="properties mb-30">
-                            <div class="properties__card">
-                                <div class="about-icon">
-                                    <img src="assets/img/icon/price.svg" alt="">
-                                </div>
-                                <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <p class="mb-25">₹10000 <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -284,7 +284,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Location</h3>
-                                <p>You’ll look at graphs and charts in Task One, how to approach </p>
+                                <p>Near Bhiwani Public School,Gymkhana Club</p>
                             </div>
                         </div>
                     </div>
